# opengl_cpp

./: CMakeLists.txt
.cache/clangd/index/: box.cpp.14042E018799A5A7.idx  box.h.97768805F569E6C2.idx  camera.cpp.07C8EE04CFBDD2DD.idx  camera.h.59B13787C7916F63.idx  gameItem.cpp.012594102EA867AA.idx  gameItem.h.AE31F66157C8DBE7.idx  glad.c.65ED765A38FF52F1.idx  glad.h.EAD56389EA0C4DC7.idx  khrplatform.h.DFCB88C24C4273CC.idx  kutuphane.cpp.53FE54D9AB229BCB.idx  kutuphane.h.A4FFBDA481246E11.idx  main.cpp.FA0737522B6DE130.idx  mesh.cpp.352760FF73CCFF69.idx  mesh.h.2C7902F8D4B3E57B.idx  shader.cpp.C986A94387266911.idx  shader.h.F718275D3F098629.idx
include/: box.h  camera.h  gameItem.h  mesh.h  shader.h
include/glad/: glad.h
res/: fragment.glsl  lightingVertex.glsl  vertex.glsl
src/: box.cpp  gameItem.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp
